# tvb-llm-robust-neurostim

./: .gitignore  METHODOLOGY.md  README.md  bo_comparison.json  bo_comparison.py  brain3d.html  brain3d_data.json  cohort.py  cohort_results_20.json  engine.py  extract_gaps.py  fetch_all_papers.py  fetch_papers.py  generalization_data.json  index.html  modal_data.json  pyproject.toml  rag_optimizer.py  rag_results.json  rank_ideas.py  ranked_ideas.md  results.json  rl_loop.py  rl_loop_v2.py  run_cohort.py  run_cohort_full.py  run_stimulation_landscape.py  simulate.py  simulate_v2.py  visualize.py
paper/: README.md  arxiv.sty  generate_figures.py  main.tex
results/: clinical_landscape.json  cohort_results_test.json  extras_data.json  network_topology.json  results_v2.json  waveform_data.json
scripts/: bo_comparison.py  cohort.py  extract_gaps.py  rag_optimizer.py  rl_loop.py  rl_loop_v2.py  run_cohort.py  run_cohort_full.py  simulate_v2.py  visualize.py
src/tvb_llm_neurostim/: batch.py  cohort_analysis.py  config.py  literature.py  optimization.py  pubmed.py  rag.py  ranking.py  simulation.py  stimulation_landscape.py  tvb_runtime.py  visualization.py
tests/: test_artifacts_and_site.py  test_package_integration.py
tvb_llm_neurostim/: __init__.py  batch.py  cohort.py  cohort_analysis.py  config.py  json_utils.py  literature.py  optimization.py  pubmed.py  rag.py  ranking.py  stimulation_landscape.py  visualization.py
